# rust_lambda_step_function

./: README.md
ind4/: Cargo.toml  input.json  samconfig.toml  template.yaml  workflow,json
ind4/.aws-sam/: build.toml
ind4/src/: Cargo.toml  Makefile  main.rs
ind4/workflow/: workflow,json
