[package]
name = "ind4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.0"
serde_derive = "1.0.130"
serde = "1.0.130"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
futures = "0.3"
anyhow = "1.0"

[[bin]]
name = "my_lambda_function"
path = "src/main.rs"